--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ hr{
  
 
 
-.main-header{
+/*.main-header{
     font-size: 3em;
 }
 
@@ -341,7 +341,7 @@ hr{
 
 
 
-/* asdasd */
+
 
 .page {
     font-size: .8rem;
@@ -353,3 +353,4 @@ hr{
       font-size: 1.2rem;
     }
   } 
+*/
