--- a/css/meni.css
+++ b/css/meni.css
@@ -96,10 +96,7 @@ nav a {
     width: 340px;
     line-height: 290%;
     background-color: #003537;
-    height: 800px;
-   
-    
-    
+    height: 670px;
 }
 .menu-left-bar a{
     text-decoration: none;
@@ -137,19 +134,15 @@ nav a {
 
 }
 .food-section{
-    height: 2000px;
-    
     display: flex;
     flex-direction: column;
-   
     width: 1920px;
     padding-left: 340px;
-    
 }
-#food-section-header{
+.food-section-header{
     font-family: MadeSaonara;
     color: #003537 ;
-    font-size: 53px;
+    font-size: 36px;
     padding-left: 30px;
     display: flex;
     align-self: center;
@@ -233,4 +226,15 @@ nav a {
 }
 .yellow{
     color: #F2BE3A;
+}
+.footer-nontransparent{
+    width: 100%;
+    height: 97px;
+    background-color: #003537 ;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    z-index: 999;
+    
 }
